--- a/about/index.html
+++ b/about/index.html
@@ -117,7 +117,7 @@
       <h1>Sobre mí</h1>
     </header>
 
-    <p>Me llamo Héctor Meleiro. Estudié Ciencias Políticas en la UCM y un Máster en Análisis Político y Electoral en la UC3M. En la actualidad trabajo como asesor en el gabinete de Presidencia del Gobierno español.</p>
+    <p>Me llamo Héctor Meleiro. Estudié Ciencias Políticas en la UCM y un Máster en Análisis Político y Electoral en la UC3M.</p>
 <p>Soy adicto a todo lo que tenga que ver con la explotación y visualización de datos. He escrito sobre política y otros temas en <a href="https://www.eldiario.es/autores/hector_meleiro/">ElDiario.es</a>, <a href="http://agendapublica.elpais.com/podemos-control-danos/">Agenda Pública</a>, <a href="https://www.huffingtonpost.es/hector-meleiro/operacion-triunfo-el-futbol-de-quienes-no-ven-el-futbol_a_23397339/">HuffPost</a> y <a href="https://ctxt.es/es/20170517/Firmas/12787/politica-Espana-generaciones-elecciones-edad.htm">CTXT</a>. Un día creé <a href="https://www.eldiario.es/rastreador/Colega-TFM-Twitter-trabajos-Cifuentes_6_756684348.html">un bot</a> para echarme unas risas. <a href="/projects/">Aquí</a> un resumen de algunas cosas que he hecho.</p>
 <p>Me puedes contactar por <a href="https://twitter.com/hmeleiros">Twitter</a>, <a href="https://github.com/hmeleiro">Github</a> o <a href="https://www.linkedin.com/in/h%C3%A9ctor-meleiro-283000151/">Linkedin</a>.</p>
 
