--- a/en/about/index.html
+++ b/en/about/index.html
@@ -117,7 +117,7 @@
       <h1>Sobre mí</h1>
     </header>
 
-    <p>My name is Héctor Meleiro. I studied Political Science at the Complutense University of Madrid and a Master degree in Political and Electoral Analysis at UC3M. I work as an advisor in the cabinet of the Presidency of the Spanish Government.</p>
+    <p>My name is Héctor Meleiro. I studied Political Science at the Complutense University of Madrid and a Master degree in Political and Electoral Analysis at UC3M.</p>
 <p>I am addicted to everything that has to do with data analysis and visualization. I have written about politics and other issues in <a href="https://www.eldiario.es/autores/hector_meleiro/">ElDiario.es</a>, <a href="http://agendapublica.elpais.com/podemos-control-danos/">Agenda Pública</a>, <a href="https://www.huffingtonpost.es/hector-meleiro/operacion-triunfo-el-futbol-de-quienes-no-ven-el-futbol_a_23397339/">HuffPost</a> and <a href="https://ctxt.es/es/20170517/Firmas/12787/politica-Espana-generaciones-elecciones-edad.htm">CTXT</a>. One day I created <a href="https://www.eldiario.es/rastreador/Colega-TFM-Twitter-trabajos-Cifuentes_6_756684348.html">a bot</a> to have some laughs. <a href="/projects/">Here</a> a summary of the things I have done lately.</p>
 <p>You can contact me by <a href="https://twitter.com/hmeleiros">Twitter</a>, <a href="https://github.com/hmeleiro">Github</a> or <a href="https://www.linkedin.com/in/h%C3%A9ctor-meleiro-283000151/">Linkedin</a>.</p>
 
